[gd_scene load_steps=6 format=1]

[ext_resource path="res://battle/menu.gd" type="Script" id=1]
[ext_resource path="res://miscs/panel_battle_background.tres" type="StyleBox" id=2]
[ext_resource path="res://miscs/panel_battle_background_selected.tres" type="StyleBox" id=3]
[ext_resource path="res://miscs/panel_transparent.tres" type="StyleBox" id=4]
[ext_resource path="res://fonts/normal_menu.tres" type="DynamicFont" id=5]

[node name="Menu" type="Container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="PanelCommand" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 192.0
margin/bottom = 262.0
custom_styles/panel = ExtResource( 2 )

[node name="CommandList" type="ItemList" parent="PanelCommand"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 16.0
margin/top = 16.0
margin/right = 176.0
margin/bottom = 246.0
custom_styles/selected_focus = ExtResource( 3 )
custom_styles/bg_focus = ExtResource( 4 )
custom_styles/bg = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )

[node name="MagicList" type="ItemList" parent="PanelCommand"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 192.0
margin/top = 0.0
margin/right = 592.0
margin/bottom = 444.0
custom_styles/selected_focus = ExtResource( 3 )
custom_styles/bg_focus = ExtResource( 2 )
custom_styles/bg = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )

[node name="MagicTargetList" type="ItemList" parent="PanelCommand"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 576.0
margin/top = 0.0
margin/right = 826.0
margin/bottom = 150.0
custom_styles/selected_focus = ExtResource( 3 )
custom_styles/bg_focus = ExtResource( 2 )
custom_styles/bg = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )

[node name="ItemList" type="ItemList" parent="PanelCommand"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 192.0
margin/top = 0.0
margin/right = 592.0
margin/bottom = 444.0
custom_styles/selected_focus = ExtResource( 3 )
custom_styles/bg_focus = ExtResource( 2 )
custom_styles/bg = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )

[node name="ItemTargetList" type="ItemList" parent="PanelCommand"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 576.0
margin/top = 0.0
margin/right = 826.0
margin/bottom = 150.0
custom_styles/selected_focus = ExtResource( 3 )
custom_styles/bg_focus = ExtResource( 2 )
custom_styles/bg = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )

[connection signal="item_activated" from="PanelCommand/CommandList" to="." method="_on_CommandList_item_activated"]

[connection signal="item_activated" from="PanelCommand/MagicList" to="." method="_on_MagicList_item_activated"]

[connection signal="item_activated" from="PanelCommand/MagicTargetList" to="." method="_on_MagicTargetList_item_activated"]

[connection signal="item_activated" from="PanelCommand/ItemList" to="." method="_on_ItemList_item_activated"]

[connection signal="item_activated" from="PanelCommand/ItemTargetList" to="." method="_on_ItemPlayerList_item_activated"]


